--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 loop: 1,
                 controls: 0,
                 showinfo: 0,
-                playlist: '9511Qbh8H2o'
+                playlist: '9511Qbh8H2o',
+                enablejsapi: 1,
+                origin: 'http://player.nibemi.com'
             },
             events: {
             'onReady': onPlayerReady,
