--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
     <button id="full_screen">Full Screen</button>
     
     <script>
-
-        
-
-
         var videoIDs = [
             '9511Qbh8H2o',
             'jPV6J4YUQec',
@@ -67,8 +63,8 @@
                     controls: 1,
                     showinfo: 0,                    
                     enablejsapi: 1,
-                    origin: 'http://localhost/reproductor_web'
-                    // origin: 'http://player.nibemi.com'
+                    // origin: 'http://localhost/reproductor_web'
+                    origin: 'http://player.nibemi.com'
                 },
                 events: {
                     'onReady': onPlayerReady,
